--- a/chat/gaim/Makefile
+++ b/chat/gaim/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.54 2004/02/25 18:37:33 minskim Exp $
+# $NetBSD: Makefile,v 1.55 2004/03/01 15:19:41 jmmv Exp $
 #
 
 DISTNAME=	gaim-0.75
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	chat x11
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=gaim/}
 EXTRACT_SUFX=	.tar.bz2
