--- a/audio/libmad/Makefile
+++ b/audio/libmad/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2004/02/14 17:21:33 jlam Exp $
+# $NetBSD: Makefile,v 1.7 2004/03/01 15:54:45 adam Exp $
 #
 
-DISTNAME=	libmad-0.15.0b
-PKGREVISION=	1
+DISTNAME=	libmad-0.15.1b
 CATEGORIES=	audio
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=mad/} \
 		ftp://ftp.mars.org/pub/mpeg/
@@ -13,7 +12,7 @@ COMMENT=	High-quality MPEG audio decoder
 
 CONFLICTS=	mad<0.15
 
-USE_BUILDLINK2=		YES
+USE_BUILDLINK3=		YES
 GNU_CONFIGURE=		YES
 USE_LIBTOOL=		YES
 
@@ -25,5 +24,5 @@ post-build:
 post-install:
 	${INSTALL_DATA} ${WRKDIR}/mad.pc ${PREFIX}/lib/pkgconfig
 
-.include "../../devel/pkgconfig/buildlink2.mk"
+.include "../../devel/pkgconfig/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
