--- a/audio/libid3tag/Makefile
+++ b/audio/libid3tag/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2004/02/14 17:21:33 jlam Exp $
+# $NetBSD: Makefile,v 1.10 2004/03/01 15:55:33 adam Exp $
 #
 
-DISTNAME=	libid3tag-0.15.0b
-PKGREVISION=	1
+DISTNAME=	libid3tag-0.15.1b
 CATEGORIES=	audio
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=mad/} \
 		ftp://ftp.mars.org/pub/mpeg/
