--- a/games/Makefile
+++ b/games/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.198 2004/02/21 07:44:22 xtraeme Exp $
+# $NetBSD: Makefile,v 1.199 2004/03/01 22:51:10 heinz Exp $
 #
 
 COMMENT=	Games
@@ -45,6 +45,7 @@ SUBDIR+=	defendguin
 SUBDIR+=	digger
 SUBDIR+=	dipmap
 SUBDIR+=	dopewars
+SUBDIR+=	enigma
 SUBDIR+=	eus-demo
 SUBDIR+=	exchess
 SUBDIR+=	exchess-book-medium
