--- a/graphics/jasper/Makefile
+++ b/graphics/jasper/Makefile
@@ -1,15 +1,14 @@
-# $NetBSD: Makefile,v 1.14 2004/02/14 17:21:42 jlam Exp $
+# $NetBSD: Makefile,v 1.15 2004/03/02 10:28:18 adam Exp $
 #
 
-DISTNAME=		jasper-1.600.0
-PKGREVISION=		1
-CATEGORIES=		graphics
-MASTER_SITES=		http://www.ece.uvic.ca/~mdadams/jasper/software/
-EXTRACT_SUFX=		.zip
+DISTNAME=	jasper-1.701.0
+CATEGORIES=	graphics
+MASTER_SITES=	http://www.ece.uvic.ca/~mdadams/jasper/software/
+EXTRACT_SUFX=	.zip
 
-MAINTAINER=		tech-pkg@NetBSD.org
-HOMEPAGE=		http://www.ece.uvic.ca/~mdadams/jasper/
-COMMENT=		Software-based reference implementation of the JPEG-2000 codec
+MAINTAINER=	adam@NetBSD.org
+HOMEPAGE=	http://www.ece.uvic.ca/~mdadams/jasper/
+COMMENT=	Software-based reference implementation of the JPEG-2000 codec
 
 GNU_CONFIGURE=		YES
 USE_BUILDLINK3=		YES
@@ -18,8 +17,8 @@ CONFIGURE_ARGS+=	--enable-shared --without-x --disable-opengl
 
 post-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/jasper
-.for doc in ChangeLog LICENSE NEWS README
-	${INSTALL_DATA} ${WRKSRC}/${doc} ${PREFIX}/share/doc/jasper
+.for doc in jasper jpeg2000
+	${INSTALL_DATA} ${WRKSRC}/doc/${doc}.pdf ${PREFIX}/share/doc/jasper
 .endfor
 
 .include "../../mk/bsd.prefs.mk"
