--- a/lang/gcc3-c++/Makefile
+++ b/lang/gcc3-c++/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.9 2004/02/13 15:13:01 jlam Exp $
+# $NetBSD: Makefile,v 1.10 2004/03/02 14:46:33 drochner Exp $
 
 PKGNAME=	gcc3${GCC3_PKGMODIF}-c++-${GCC_VERSION}
-PKGREVISION=	1
 COMMENT=	GNU Compiler Collection, v3 - C++ compiler
 
 INSTLIBS=	libstdc++-v3/libsupc++/libsupc++.la			\
