--- a/lang/gcc3-f77/Makefile
+++ b/lang/gcc3-f77/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.8 2004/02/13 15:13:01 jlam Exp $
+# $NetBSD: Makefile,v 1.9 2004/03/02 14:46:33 drochner Exp $
 
 PKGNAME=	gcc3${GCC3_PKGMODIF}-f77-${GCC_VERSION}
-PKGREVISION=	1
 COMMENT=	GNU Compiler Collection, v3 - F77 compiler
 
 INFO_FILES=	g77.info
