--- a/print/gimp-print-lib/Makefile
+++ b/print/gimp-print-lib/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.20 2004/02/14 17:21:50 jlam Exp $
+# $NetBSD: Makefile,v 1.21 2004/03/02 14:56:07 drochner Exp $
 #
 
-DISTNAME=	gimp-print-4.2.5
-PKGNAME=	gimp-print-lib-4.2.5
-PKGREVISION=	1
+DISTNAME=	gimp-print-4.2.6
+PKGNAME=	gimp-print-lib-4.2.6
 CATEGORIES=	print
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=gimp-print/}
 
