--- a/textproc/expat/Makefile
+++ b/textproc/expat/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.13 2004/02/14 17:21:53 jlam Exp $
+# $NetBSD: Makefile,v 1.14 2004/03/02 18:13:58 drochner Exp $
 #
 
-DISTNAME=	expat-1.95.6
-PKGREVISION=	1
+DISTNAME=	expat-1.95.7
 CATEGORIES=	textproc
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=expat/}
 
