--- a/net/lambdamoo-doc/Makefile
+++ b/net/lambdamoo-doc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2004/01/20 12:22:19 agc Exp $
+# $NetBSD: Makefile,v 1.7 2004/03/02 22:17:03 kristerw Exp $
 
 DISTNAME=	lambdamoo-doc-1.8.0p6
 CATEGORIES=	net
@@ -14,6 +14,7 @@ COMMENT=	Documentation for lambdamoo
 EXTRACT_CMD=	:
 
 WRKSRC=		${WRKDIR}
+USE_MAKEINFO=	yes
 
 post-extract:
 	${CP} ${DISTDIR}/ProgrammersManual.texinfo ${WRKSRC}
