--- a/textproc/docbook-xsl/Makefile
+++ b/textproc/docbook-xsl/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2004/02/28 20:52:04 jmmv Exp $
+# $NetBSD: Makefile,v 1.19 2004/03/02 22:40:41 heinz Exp $
 #
 
 DISTNAME=	docbook-xsl-1.65.0
@@ -43,7 +43,7 @@ post-extract:
 .undef f
 
 post-patch:
-	${FIND} ${WRKSRC} -name "*.subst.sav" -printx | ${XARGS} ${RM}
+	${FIND} ${WRKSRC} -name "*.subst.sav" -print | ${XARGS} ${RM}
 
 do-install:
 	${INSTALL_DATA_DIR} ${DOCDIR}
