--- a/net/bittorrent/Makefile
+++ b/net/bittorrent/Makefile
@@ -1,28 +1,17 @@
-# $NetBSD: Makefile,v 1.14 2004/03/02 15:49:36 wiz Exp $
+# $NetBSD: Makefile,v 1.15 2004/03/03 10:02:08 recht Exp $
 #
 
-DISTNAME=	BitTorrent-3.3
-PKGNAME=	${DISTNAME:S/BitT/bitt/}
-PKGREVISION=	4
-CATEGORIES=	net
-MASTER_SITES=	http://bitconjurer.org/BitTorrent/
+.include "Makefile.common"
 
-MAINTAINER=	tech-pkg@NetBSD.org
-HOMEPAGE=	http://bitconjurer.org/BitTorrent/
-COMMENT=	File sharing tool
+PKGNAME=	${DISTNAME:S/BitT/bitt/}
+PKGREVISION=	5
 
 PYDISTUTILSPKG=	YES
-USE_BUILDLINK2=	YES
-
-PYTHON_VERSIONS_ACCEPTED=	23pth 22pth
 
 post-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/bittorrent
 	${INSTALL_DATA} ${WRKSRC}/README.txt ${PREFIX}/share/doc/bittorrent
 
-.include "../../lang/python/application.mk"
 .include "../../lang/python/extension.mk"
-.include "../../x11/py-wxWindows/buildlink2.mk"
 .include "../../devel/py-cursespanel/buildlink2.mk"
-
 .include "../../mk/bsd.pkg.mk"
