--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.449 2004/02/29 03:33:06 xtraeme Exp $
+# $NetBSD: Makefile,v 1.450 2004/03/03 10:05:40 recht Exp $
 #
 
 COMMENT=	Networking tools
@@ -28,6 +28,7 @@ SUBDIR+=	bind8
 SUBDIR+=	bind9
 SUBDIR+=	bing
 SUBDIR+=	bittorrent
+SUBDIR+=	bittorrent-gui
 SUBDIR+=	bounce
 SUBDIR+=	bpalogin
 SUBDIR+=	bridged
