--- a/devel/tavrasm/Makefile
+++ b/devel/tavrasm/Makefile
@@ -1,12 +1,12 @@
-# $NetBSD: Makefile,v 1.8 2003/09/11 18:08:44 jmmv Exp $
+# $NetBSD: Makefile,v 1.9 2004/03/03 13:07:42 dillo Exp $
 #
 
 DISTNAME=	tavrasm
-PKGNAME=	${DISTNAME}-1.19
+PKGNAME=	${DISTNAME}-1.20
 CATEGORIES=	devel
 MASTER_SITES=	http://www.tavrasm.org/
 
-MAINTAINER=	dillo@giga.or.at
+MAINTAINER=	dillo@NetBSD.org
 HOMEPAGE=	http://www.tavrasm.org/
 COMMENT=	Assembler for the Atmel AVR series of microcontrollers
 
@@ -16,7 +16,7 @@ WRKSRCTOP=	${WRKDIR}/${PKGNAME_NOREV:S/.//:S/-/./}
 WRKSRC=		${WRKSRCTOP}/src
 MAKEFILE=	makefile
 
-DIST_SUBDIR=	${PKGNAME}
+DIST_SUBDIR=	${PKGNAME_NOREV}
 
 do-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/tavrasm
