--- a/devel/ncurses/Makefile
+++ b/devel/ncurses/Makefile
@@ -1,16 +1,15 @@
-# $NetBSD: Makefile,v 1.56 2004/02/02 13:02:49 jlam Exp $
+# $NetBSD: Makefile,v 1.57 2004/03/03 13:36:09 adam Exp $
 
-DISTNAME=		ncurses-${NC_VERS}
-NC_VERS=		5.3
-PKGREVISION=		2
-CATEGORIES=		devel
-MASTER_SITES=		${MASTER_SITE_GNU:=ncurses/} \
-			ftp://dickey.his.com/ncurses/ \
-			ftp://dickey.his.com/ncurses/${NC_VERS}/
+DISTNAME=	ncurses-${NC_VERS}
+NC_VERS=	5.4
+CATEGORIES=	devel
+MASTER_SITES=	${MASTER_SITE_GNU:=ncurses/} \
+		ftp://dickey.his.com/ncurses/ \
+		ftp://dickey.his.com/ncurses/${NC_VERS}/
 
-MAINTAINER=		jlam@NetBSD.org
-HOMEPAGE=		http://dickey.his.com/ncurses/ncurses.html
-COMMENT=		CRT screen handling and optimization package
+MAINTAINER=	jlam@NetBSD.org
+HOMEPAGE=	http://dickey.his.com/ncurses/ncurses.html
+COMMENT=	CRT screen handling and optimization package
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
