--- a/databases/tcl-fbsql/Makefile
+++ b/databases/tcl-fbsql/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.8 2004/01/20 12:12:49 agc Exp $
+# $NetBSD: Makefile,v 1.9 2004/03/03 14:19:05 jdolecek Exp $
 
 DISTNAME=		fbsql.c
 PKGNAME=		tcl-fbsql-1.05
-CATEGORIES=		database
+CATEGORIES=		databases
 MASTER_SITES=		http://www.fastbase.co.nz/fbsql/
 EXTRACT_SUFX=
 
