--- a/net/gnet/Makefile
+++ b/net/gnet/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.22 2004/02/14 18:28:48 jmmv Exp $
+# $NetBSD: Makefile,v 1.23 2004/03/03 15:59:56 minskim Exp $
 #
 
-DISTNAME=		gnet-2.0.4
+DISTNAME=		gnet-2.0.5
 CATEGORIES=		net
 MASTER_SITES=		http://www.gnetlibrary.org/src/
 
