--- a/databases/py-ZODB/Makefile
+++ b/databases/py-ZODB/Makefile
@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.5 2004/02/25 21:24:44 minskim Exp $
+# $NetBSD: Makefile,v 1.6 2004/03/03 16:38:16 recht Exp $
 #
 
-DISTNAME=		ZODB3-3.2
+DISTNAME=		ZODB3-3.2.1
 PKGNAME=		${PYPKGPREFIX}-${DISTNAME:S/3-/-/}
-PKGREVISION=		1
 CATEGORIES=		databases
-MASTER_SITES=		http://zope.org/Products/ZODB3.2/3.2/
+MASTER_SITES=		http://zope.org/Products/ZODB3.2/3.2.1/
 
 MAINTAINER=		dotz@irc.pl
 HOMEPAGE=		http://zope.org/Products/ZODB3.2/3.2/
