--- a/editors/bvi/Makefile
+++ b/editors/bvi/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.17 2004/01/20 12:14:05 agc Exp $
+# $NetBSD: Makefile,v 1.18 2004/03/03 21:30:08 ben Exp $
 #
 
-DISTNAME=	bvi-1.3.0.src
-PKGNAME=	bvi-1.3.0
-PKGREVISION=			1
+DISTNAME=	bvi-1.3.2.src
+PKGNAME=	bvi-1.3.2
 CATEGORIES=	editors
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=bvi/}
 
@@ -12,9 +11,11 @@ HOMEPAGE=	http://bvi.sourceforge.net/
 COMMENT=	Vi-like editor for binary files
 
 WRKSRC=		${WRKDIR}/${PKGNAME_NOREV}
-USE_BUILDLINK2=	YES
+USE_BUILDLINK3=	YES
 GNU_CONFIGURE=	YES
 MAKE_ENV+=	SHELL=${SH}
 
-.include "../../devel/ncurses/buildlink2.mk"
+PKG_INSTALLATION_TYPES=	overwrite pkgviews
+
+.include "../../mk/curses.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
